@@ -1,5 +1,8 @@
 Release CMTK-1.3.1:
 
+- Added: padding in convertx tool can now be turned on and off multiple times
+    during the sequence of operations, including the use of different padding
+    values at different times.
 - Added: connected components operator; also added this as a function to
     convertx tool.
 - Configuration/build: when system zlib is installed, we use it instead of the
